<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >
        <ProgressBar
            android:id="@+id/ProgressC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:progress="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlaTypeAnnu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioTypeNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioNewsTous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioNewsTous"
                android:checked="true"
                android:onClick="onSearchclick"/>

            <RadioButton
                android:id="@+id/radioNewsDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioNewsDistrict"
                android:onClick="onSearchclick"/>

            <RadioButton
                android:id="@+id/radioNewsClubs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioNewsClubs"
                android:onClick="onSearchclick"/>

        </RadioGroup>



        <ListView
            android:id="@+id/listView_Nouvelles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:padding="10dp" >
        </ListView>
    </LinearLayout>

</LinearLayout>
